--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "http": "0.0.0",
+    "mongoose": "^4.4.17",
     "morgan": "^1.7.0"
   }
 }
