--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/zippeellii/startuphack-backend#readme",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "http": "0.0.0",
-    "request": "^2.72.0",
     "mongoose": "^4.4.17",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "request": "^2.72.0"
   }
 }
